--- a/index.html
+++ b/index.html
@@ -47,85 +47,85 @@
                 <button type="button" class="hero-btn" data-modal-open>Заказать услугу</button>
             </section>
 
-            <section class="features section">
+            <section class="section">
                 <div class="container">
                     <h2 class="title visually-hidden">Особенности</h2>
-                    <ul class="features-list list">
-                        <li class="features-item">
-                            <div class="features-item-icons">
-                                <svg class="features-icons" width="70" height="70">
+                    <ul class="features list">
+                        <li class="features__item">
+                            <div class="features__img">
+                                <svg class="features__icon" width="70" height="70">
                                     <use href="./images/icons/symbol-defs.svg#icon-antenna-img"></use>
                                 </svg>
                             </div>
-                            <h3 class="features-title">Внимание к деталям</h3>
-                            <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                            <h3 class="features__title">Внимание к деталям</h3>
+                            <p class="features__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                         </li>
-                        <li class="features-item">
-                            <div class="features-item-icons">
-                                <svg class="features-icons" width="70" height="70">
+                        <li class="features__item">
+                            <div class="features__img">
+                                <svg class="features__icon" width="70" height="70">
                                     <use href="./images/icons/symbol-defs.svg#icon-clock-img"></use>
                                 </svg>
                             </div>
-                            <h3 class="features-title">Пунктуальность</h3>
-                            <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                            <h3 class="features__title">Пунктуальность</h3>
+                            <p class="features__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                         </li>
-                        <li class="features-item">
-                            <div class="features-item-icons">
-                                <svg class="features-icons" width="70" height="70">
+                        <li class="features__item">
+                            <div class="features__img">
+                                <svg class="features__icon" width="70" height="70">
                                     <use href="./images/icons/symbol-defs.svg#icon-diagram-img"></use>
                                 </svg>
                             </div>
-                            <h3 class="features-title">Планирование</h3>
-                            <p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                            <h3 class="features__title">Планирование</h3>
+                            <p class="features__text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                         </li>
-                        <li class="features-item">
-                            <div class="features-item-icons">
-                                <svg class="features-icons" width="70" height="70">
+                        <li class="features__item">
+                            <div class="features__img">
+                                <svg class="features__icon" width="70" height="70">
                                     <use href="./images/icons/symbol-defs.svg#icon-astronaut-img"></use>
                                 </svg>
                             </div>
-                            <h3 class="features-title">Современные технологии</h3>
-                            <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                            <h3 class="features__title">Современные технологии</h3>
+                            <p class="features__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                         </li>
                     </ul>
                 </div>
             </section>
 
-            <section class="services section">
+            <section class="section section--padding-top">
                <div class="container">
-                    <h2 class="services-title title">Чем мы занимаемся</h2>
-                    <ul class="services-list list">
-                        <li class="services-item">
-                            <div class="services-item-img">
+                    <h2 class="title title--margin-bottom">Чем мы занимаемся</h2>
+                    <ul class="services list">
+                        <li class="services__item">
+                            <div class="services__img">
                                 <img src="./images/services/box1.jpg" alt="Веб-сайты" width="370" height="294">
-                                <h3 class="services-item-title">Десктопные приложения</h3>
+                                <h3 class="services__title">Десктопные приложения</h3>
                             </div>
                         </li>
-                        <li class="services-item">
-                            <div class="services-item-img">
+                        <li class="services__item">
+                            <div class="services__img">
                                 <img src="./images/services/box2.jpg" alt="Приложения" width="370" height="294">
-                                <h3 class="services-item-title">Мобильные приложения</h3>
+                                <h3 class="services__title">Мобильные приложения</h3>
                             </div>
                         </li>
-                        <li class="services-item">
-                            <div class="services-item-img">
+                        <li class="services__item">
+                            <div class="services__img">
                                 <img src="./images/services/box3.jpg" alt="Дизайн" width="370" height="294">
-                                <h3 class="services-item-title">Дизайнерские решения</h3>
+                                <h3 class="services__title">Дизайнерские решения</h3>
                             </div>
                         </li>
                     </ul>
                </div>
             </section>
 
-            <section class="team section">
+            <section class="section section--background">
                <div class="container">
-                    <h2 class="team-title title">Наша команда</h2>
-                    <ul class="team-list list">
-                        <li class="team-item">
+                    <h2 class="title title--margin-bottom">Наша команда</h2>
+                    <ul class="team list">
+                        <li class="team__item">
                             <img src="./images/our-team/img-team-1.jpg" alt="Дизайнер1" width="270" height="260">
-                            <div class="team-member">
-                                <h3 class="team-member-title">Игорь Демьяненко</h3>
-                                <p lang="en" class="team-text">Product Designer</p>
+                            <div class="team__member">
+                                <h3 class="team__title">Игорь Демьяненко</h3>
+                                <p lang="en" class="team__text">Product Designer</p>
                                 <ul class="social list">
                                     <li class="social__item">
                                         <a href="" class="social__link">
@@ -158,11 +158,11 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="team-item">
+                        <li class="team__item">
                             <img src="./images/our-team/img-team-2.jpg" alt="Фронтент-разработчик" width="270" height="260">
-                            <div class="team-member">
-                                <h3 class="team-member-title">Ольга Репина</h3>
-                                <p lang="en" class="team-text">Frontend Developer</p>
+                            <div class="team__member">
+                                <h3 class="team__title">Ольга Репина</h3>
+                                <p lang="en" class="team__text">Frontend Developer</p>
                                 <ul class="social list">
                                     <li class="social__item">
                                         <a href="" class="social__link">
@@ -195,11 +195,11 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="team-item">
+                        <li class="team__item">
                             <img src="./images/our-team/img-team-3.jpg" alt="Маркетолог" width="270" height="260">
-                            <div class="team-member">
-                                <h3 class="team-member-title">Николай Тарасов</h3>
-                                <p lang="en" class="team-text">Marketing</p>
+                            <div class="team__member">
+                                <h3 class="team__title">Николай Тарасов</h3>
+                                <p lang="en" class="team__text">Marketing</p>
                                 <ul class="social list">
                                     <li class="social__item">
                                         <a href="" class="social__link">
@@ -232,11 +232,11 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="team-item">
+                        <li class="team__item">
                             <img src="./images/our-team/img-team-4.jpg" alt="Дизайнер2" width="270" height="260">
-                            <div class="team-member">
-                                <h3 class="team-member-title">Михаил Ермаков</h3>
-                                <p lang="en" class="team-text">UI Designer</p>
+                            <div class="team__member">
+                                <h3 class="team__title">Михаил Ермаков</h3>
+                                <p lang="en" class="team__text">UI Designer</p>
                                 <ul class="social list">
                                     <li class="social__item">
                                         <a href="" class="social__link">
@@ -273,48 +273,48 @@
                </div>
             </section>
 
-            <section class="clients section">
+            <section class="section">
                 <div class="container">
-                    <h2 class="clients-title title">Постоянные клиенты</h2>
-                    <ul class="clients-list list">
-                        <li class="clients-item">
-                            <a href="" class="clients-item-link">
-                                <svg class="clients-item-icon" width="106" height="60">
+                    <h2 class="title title--margin-bottom">Постоянные клиенты</h2>
+                    <ul class="clients list">
+                        <li class="clients__item">
+                            <a href="" class="clients__link">
+                                <svg class="clients__icon" width="106" height="60">
                                     <use href="./images/icons/symbol-defs.svg#icon-logo-client1"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="clients-item">
-                            <a href="" class="clients-item-link">
-                                <svg class="clients-item-icon" width="106" height="60">
+                        <li class="clients__item">
+                            <a href="" class="clients__link">
+                                <svg class="clients__icon" width="106" height="60">
                                     <use href="./images/icons/symbol-defs.svg#icon-logo-client2"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="clients-item">
-                            <a href="" class="clients-item-link">
-                                <svg class="clients-item-icon" width="106" height="60">
+                        <li class="clients__item">
+                            <a href="" class="clients__link">
+                                <svg class="clients__icon" width="106" height="60">
                                     <use href="./images/icons/symbol-defs.svg#icon-logo-client3"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="clients-item">
-                            <a href="" class="clients-item-link">
-                                <svg class="clients-item-icon" width="106" height="60">
+                        <li class="clients__item">
+                            <a href="" class="clients__link">
+                                <svg class="clients__icon" width="106" height="60">
                                     <use href="./images/icons/symbol-defs.svg#icon-logo-client4"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="clients-item">
-                            <a href="" class="clients-item-link">
-                                <svg class="clients-item-icon" width="106" height="60">
+                        <li class="clients__item">
+                            <a href="" class="clients__link">
+                                <svg class="clients__icon" width="106" height="60">
                                     <use href="./images/icons/symbol-defs.svg#icon-logo-client5"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="clients-item">
-                            <a href="" class="clients-item-link">
-                                <svg class="clients-item-icon" width="106" height="60">
+                        <li class="clients__item">
+                            <a href="" class="clients__link">
+                                <svg class="clients__icon" width="106" height="60">
                                     <use href="./images/icons/symbol-defs.svg#icon-logo-client6"></use>
                                 </svg>
                             </a>
@@ -371,12 +371,12 @@
                         </li>
                     </ul>
                 </div>
-                <div class="footer-application">
-                    <p class="footer-form-text">Подпишитесь на рассылку</p>
+                <div class="application">
+                    <p class="application__text">Подпишитесь на рассылку</p>
                     <form class="footer-form">
                         <input type="email" class="user-mail-footer" name="user-mail-footer" id="user-mail-footer" placeholder="E-mail">
-                        <button type="button" class="footer-form-btn">Подписаться
-                            <svg class="footer-form-icon" width="24" height="24">
+                        <button type="button" class="footer-form__btn">Подписаться
+                            <svg class="footer-form__icon" width="24" height="24">
                                 <use href="./images/icons/symbol-defs.svg#icon-icon-send"></use>
                             </svg>
                         </button>
@@ -386,13 +386,13 @@
         </footer>
         <div class="backdrop is-hidden" data-modal>
             <div class="modal">
-                <button type="button" class="modal-close-btn" data-modal-close>
-                    <svg class="backdrop-item-icon" width="18" height="18">
+                <button type="button" class="close-btn" data-modal-close>
+                    <svg class="close-btn__icon" width="18" height="18">
                         <use href="./images/icons/symbol-defs.svg#icon-close-black"></use>
                     </svg>
                 </button>
-                <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
-                <form class="application-form">
+                <p class="modal__title">Оставьте свои данные, мы вам перезвоним</p>
+                <form class="modal-application">
                     <div class="modal-field">
                         <label for="user-name" class="modal-label">Имя</label>
                         <div class="modal-input-wrap">
