--- a/portfolio.html
+++ b/portfolio.html
@@ -42,132 +42,132 @@
         </header>
 
         <main>
-            <section class="projects section">
+            <section class="section">
                 <div class="container">
                     <h1 class="visually-hidden">Примеры проектов</h1>
-                    <ul class="projects-list list">
-                         <li class="project-btn-item"><button type="button" class="project-btn">Все</button></li>
-                        <li class="project-btn-item"><button type="button" class="project-btn">Веб-сайты</button></li>
-                        <li class="project-btn-item"><button type="button" class="project-btn">Приложения</button></li>
-                        <li class="project-btn-item"><button type="button" class="project-btn">Дизайн</button></li>
-                        <li class="project-btn-item"><button type="button" class="project-btn">Маркетинг</button></li>
+                    <ul class="menu list">
+                        <li class="menu__item"><button type="button" class="menu__btn">Все</button></li>
+                        <li class="menu__item"><button type="button" class="menu__btn">Веб-сайты</button></li>
+                        <li class="menu__item"><button type="button" class="menu__btn">Приложения</button></li>
+                        <li class="menu__item"><button type="button" class="menu__btn">Дизайн</button></li>
+                        <li class="menu__item"><button type="button" class="menu__btn">Маркетинг</button></li>
                     </ul>
                     
-                    <ul class="second-project-list list">
-                        <li class="second-project-item">
-                            <a href="" class="project-link">
-                                <div class="project-img">
+                    <ul class="project list">
+                        <li class="project__item">
+                            <a href="" class="project__link">
+                                <div class="project__img">
                                     <img src="./images/projects/project1.jpg" alt="Сайт пример 1" width="370" height="294">
-                                    <p class="project-item-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    <p class="project__description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
-                                <div class="project-description">
-                                    <h2 class="project-title">Технокряк</h2>
-                                    <p class="project-text">Веб-сайт</p>
+                                <div class="project__name">
+                                    <h2 class="project__title">Технокряк</h2>
+                                    <p class="project__text">Веб-сайт</p>
                                 </div>
                             </a>
                         </li>
-                        <li class="second-project-item">
-                            <a href="" class="project-link">
-                                <div class="project-img">
+                        <li class="project__item">
+                            <a href="" class="project__link">
+                                <div class="project__img">
                                     <img src="./images/projects/project2.jpg" alt="Дизайна пример 1" width="370" height="294">
-                                    <p class="project-item-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    <p class="project__description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
-                                <div class="project-description">
-                                    <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-                                    <p class="project-text">Дизайн</p>
+                                <div class="project__name">
+                                    <h2 class="project__title">Постер New Orlean vs Golden Star</h2>
+                                    <p class="project__text">Дизайн</p>
                                 </div>
                             </a>
                         </li>
-                        <li class="second-project-item">
-                            <a href="" class="project-link">
-                                <div class="project-img">
+                        <li class="project__item">
+                            <a href="" class="project__link">
+                                <div class="project__img">
                                     <img src="./images/projects/project3.jpg" alt="Приложение пример 1" width="370" height="294">
-                                    <p class="project-item-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    <p class="project__description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
-                                <div class="project-description">
-                                    <h2 class="project-title">Ресторан Seafood</h2>
-                                    <p class="project-text">Приложение</p>
+                                <div class="project__name">
+                                    <h2 class="project__title">Ресторан Seafood</h2>
+                                    <p class="project__text">Приложение</p>
                                 </div>
                             </a>
                         </li>
-                        <li class="second-project-item">
-                            <a href="" class="project-link">
-                                <div class="project-img">
+                        <li class="project__item">
+                            <a href="" class="project__link">
+                                <div class="project__img">
                                     <img src="./images/projects/project4.jpg" alt="Маркетинговый проект пример 1" width="370" height="294">
-                                    <p class="project-item-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    <p class="project__description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
-                                <div class="project-description">
-                                    <h2 class="project-title">Проект Prime</h2>
-                                    <p class="project-text">Маркетинг</p>
+                                <div class="project__name">
+                                    <h2 class="project__title">Проект Prime</h2>
+                                    <p class="project__text">Маркетинг</p>
                                 </div>
                             </a>
                         </li>
-                        <li class="second-project-item">
-                            <a href="" class="project-link">
-                                <div class="project-img">
+                        <li class="project__item">
+                            <a href="" class="project__link">
+                                <div class="project__img">
                                     <img src="./images/projects/project5.jpg" alt="Приложение пример 2" width="370" height="294">
-                                    <p class="project-item-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    <p class="project__description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
-                                <div class="project-description">
-                                    <h2 class="project-title">Проект Boxes</h2>
-                                    <p class="project-text">Приложение</p>
+                                <div class="project__name">
+                                    <h2 class="project__title">Проект Boxes</h2>
+                                    <p class="project__text">Приложение</p>
                                 </div>
                             </a>
                         </li>
-                        <li class="second-project-item">
-                            <a href="" class="project-link">
-                                <div class="project-img">
+                        <li class="project__item">
+                            <a href="" class="project__link">
+                                <div class="project__img">
                                     <img src="./images/projects/project6.jpg" alt="Сайт пример 2" width="370" height="294">
-                                    <p class="project-item-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    <p class="project__description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
-                                <div class="project-description">
-                                    <h2 class="project-title">Inspiration has no Borders</h2>
-                                    <p class="project-text">Веб-сайт</p>
+                                <div class="project__name">
+                                    <h2 class="project__title">Inspiration has no Borders</h2>
+                                    <p class="project__text">Веб-сайт</p>
                                 </div>
                             </a>
                         </li>
-                        <li class="second-project-item">
-                            <a href="" class="project-link">
-                                <div class="project-img">
+                        <li class="project__item">
+                            <a href="" class="project__link">
+                                <div class="project__img">
                                     <img src="./images/projects/project7.jpg" alt="Дизайна пример 2" width="370" height="294">
-                                    <p class="project-item-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    <p class="project__description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
-                                <div class="project-description">
-                                    <h2 class="project-title">Издание Limited Edition</h2>
-                                    <p class="project-text">Дизайн</p>
+                                <div class="project__name">
+                                    <h2 class="project__title">Издание Limited Edition</h2>
+                                    <p class="project__text">Дизайн</p>
                                 </div>
                             </a>
                         </li>
-                        <li class="second-project-item">
-                            <a href="" class="project-link">
-                                <div class="project-img">
+                        <li class="project__item">
+                            <a href="" class="project__link">
+                                <div class="project__img">
                                     <img src="./images/projects/project8.jpg" alt="Маркетинговый проект пример 2" width="370" height="294">
-                                    <p class="project-item-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    <p class="project__description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
-                                <div class="project-description">
-                                    <h2 class="project-title">Проект LAB</h2>
-                                    <p class="project-text">Маркетинг</p>
+                                <div class="project__name">
+                                    <h2 class="project__title">Проект LAB</h2>
+                                    <p class="project__text">Маркетинг</p>
                                 </div>
                             </a>
                         </li>
-                        <li class="second-project-item">
-                            <a href="" class="project-link">
-                                <div class="project-img">
+                        <li class="project__item">
+                            <a href="" class="project__link">
+                                <div class="project__img">
                                     <img src="./images/projects/project9.jpg" alt="Приложение пример 3" width="370" height="294">
-                                    <p class="project-item-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    <p class="project__description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
-                                <div class="project-description">
-                                    <h2 class="project-title">Growing Business</h2>
-                                    <p class="project-text">Приложение</p>
+                                <div class="project__name">
+                                    <h2 class="project__title">Growing Business</h2>
+                                    <p class="project__text">Приложение</p>
                                 </div>
                             </a>
                         </li>
@@ -225,12 +225,12 @@
                         </li>
                     </ul>
                 </div>
-                <div class="footer-application">
-                    <p class="footer-form-text">Подпишитесь на рассылку</p>
+                <div class="application">
+                    <p class="application__text">Подпишитесь на рассылку</p>
                     <form class="footer-form">
                         <input type="email" class="user-mail-footer" name="user-mail-footer" id="user-mail-footer" placeholder="E-mail">
-                        <button type="button" class="footer-form-btn">Подписаться
-                            <svg class="footer-form-icon" width="24" height="24">
+                        <button type="button" class="footer-form__btn">Подписаться
+                            <svg class="footer-form__icon" width="24" height="24">
                                 <use href="./images/icons/symbol-defs.svg#icon-icon-send"></use>
                             </svg>
                         </button>
