--- a/portfolio.html
+++ b/portfolio.html
@@ -11,13 +11,14 @@
             rel="stylesheet">
         <link rel="stylesheet" href="./css/modern-normalize.css">
         <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/main.min.css">
     </head>
 
     <body>
         <header class="header">
-            <div class="container container--center">
+            <div class="container header__container">
                 <nav class="navigation">
-                    <a href="" lang="en" class="logo logo--indents">Web<span class="logo-black">Studio</span></a>
+                    <a href="" lang="en" class="logo navigation__logo">Web<span class="logo-black">Studio</span></a>
                     <ul class="page-nav list">
                         <li class="page-nav__item"><a href="./index.html" class="page-nav__link">Студия</a></li>
                         <li class="page-nav__item"><a href="" class="page-nav__link current">Портфолио</a></li>
@@ -177,9 +178,9 @@
         </main>
 
         <footer class="footer">
-            <div class="container footer--baseline">
-                <div class="footer-address">
-                    <a href="" lang="en" class="logo logo--bottom">Web<span class="logo-white">Studio</span></a>
+            <div class="container footer__container">
+                <div class="footer-contacts">
+                    <a href="" lang="en" class="logo footer-contacts__logo">Web<span class="logo-white">Studio</span></a>
                     <address class="address">
                         <ul class="contacts list">
                             <li class="contacts__item"><a href="https://goo.gl/maps/sHDZmhukoqg1UG7x9" target="_blank"
