--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="header">
             <div class="container header__container">
                 <nav class="navigation">
-                    <a href="" lang="en" class="logo navigation__logo">Web<span class="logo-black">Studio</span></a>
+                    <a href="" lang="en" class="logo navigation__logo">Web<span class="logo__header logo__header--black">Studio</span></a>
                     <ul class="page-nav list">
                         <li class="page-nav__item"><a href="" class="page-nav__link current">Студия</a></li>
                         <li class="page-nav__item"><a href="./portfolio.html" class="page-nav__link">Портфолио</a></li>
@@ -329,7 +329,7 @@
         <footer class="footer">
             <div class="container footer__container">
                 <div class="footer-contacts">
-                    <a href="" lang="en" class="logo footer-contacts__logo">Web<span class="logo-white">Studio</span></a>
+                    <a href="" lang="en" class="logo footer-contacts__logo">Web<span class="logo__footer logo__footer--white">Studio</span></a>
                     <address class="address">
                         <ul class="contacts list">
                             <li class="contacts__item"><a href="https://goo.gl/maps/sHDZmhukoqg1UG7x9" target="_blank" class="contacts__link contacts__link--white">г. Киев, пр-т Леси Украинки, 26</a></li>
@@ -387,54 +387,54 @@
         </footer>
         <div class="backdrop is-hidden" data-modal>
             <div class="modal">
-                <button type="button" class="close-btn" data-modal-close>
+                <button type="button" class="modal__close-btn" data-modal-close>
                     <svg class="close-btn__icon" width="18" height="18">
                         <use href="./images/icons/symbol-defs.svg#icon-close-black"></use>
                     </svg>
                 </button>
                 <p class="modal__title">Оставьте свои данные, мы вам перезвоним</p>
-                <form class="modal-application">
-                    <div class="modal-field">
-                        <label for="user-name" class="modal-label">Имя</label>
-                        <div class="modal-input-wrap">
-                            <input type="text" name="user-name" id="user-name" class="modal-input" required>
-                            <svg class="modal-icon" width="18" height="18">
+                <form class="modal__application">
+                    <div class="modal__field">
+                        <label for="user-name" class="modal__label">Имя</label>
+                        <div class="modal__input-wrap">
+                            <input type="text" name="user-name" id="user-name" class="modal__input" required>
+                            <svg class="modal__icon" width="18" height="18">
                                 <use href="./images/icons/symbol-defs.svg#icon-person-black"></use>
                             </svg>
                         </div>
                     </div>
 
-                    <div class="modal-field">
-                        <label for="user-tel" class="modal-label">Телефон</label>
-                        <div class="modal-input-wrap">
-                            <input type="tel" name="user-tel" id="user-tel" class="modal-input" required>
-                            <svg class="modal-icon" width="18" height="18">
+                    <div class="modal__field">
+                        <label for="user-tel" class="modal__label">Телефон</label>
+                        <div class="modal__input-wrap">
+                            <input type="tel" name="user-tel" id="user-tel" class="modal__input" required>
+                            <svg class="modal__icon" width="18" height="18">
                                 <use href="./images/icons/symbol-defs.svg#icon-phone-black"></use>
                             </svg>
                         </div>
                     </div>
 
-                    <div class="modal-field">
-                        <label for="user-mail" class="modal-label">Почта</label>
-                        <div class="modal-input-wrap">
-                            <input type="email" name="user-mail" id="user-mail" class="modal-input" required>
-                            <svg class="modal-icon" width="18" height="18">
+                    <div class="modal__field">
+                        <label for="user-mail" class="modal__label">Почта</label>
+                        <div class="modal__input-wrap">
+                            <input type="email" name="user-mail" id="user-mail" class="modal__input" required>
+                            <svg class="modal__icon" width="18" height="18">
                                 <use href="./images/icons/symbol-defs.svg#icon-email-black"></use>
                             </svg>
                         </div>
                     </div>
 
-                    <label for="user-comment" class="modal-label">Комментарий</label>
-                    <textarea name="user-comment" id="user-comment" class="user-comment" placeholder="Введите текст"></textarea>
+                    <label for="user-comment" class="modal__label">Комментарий</label>
+                    <textarea name="user-comment" id="user-comment" class="modal__user-comment" placeholder="Введите текст"></textarea>
 
-                    <div class="modal-field-check">
-                        <input type="checkbox" name="modal-check" id="modal-check" class="modal-check visually-hidden">
-                        <label for="modal-check" class="modal-check-text"><span><svg class="modal-check-icon" width="16" height="15">
+                    <div class="modal__field-check">
+                        <input type="checkbox" name="modal-check" id="modal-check" class="modal__check visually-hidden">
+                        <label for="modal-check" class="modal__check-text"><span><svg class="modal__check-icon" width="16" height="15">
                             <use href="./images/icons/symbol-defs.svg#icon-check-mark"></use>
-                        </svg></span>Соглашаюсь с рассылкой и принимаю <a href="" class="modal-link"> Условия договора</a></label>
+                        </svg></span>Соглашаюсь с рассылкой и принимаю <a href="" class="modal__link"> Условия договора</a></label>
                     </div>
 
-                    <div class="form-btn"><button type="submit" class="modal-sumbit-btn">Отправить</button></div>
+                    <div class="modal__form-btn"><button type="submit" class="modal__sumbit-btn">Отправить</button></div>
                 </form>
             </div>
         </div>
