--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
         <header class="header">
             <div class="container header__container">
                 <nav class="navigation">
-                    <a href="" lang="en" class="logo navigation__logo">Web<span class="logo-black">Studio</span></a>
+                    <a href="" lang="en" class="logo navigation__logo">Web<span class="logo__header logo__header--black">Studio</span></a>
                     <ul class="page-nav list">
                         <li class="page-nav__item"><a href="./index.html" class="page-nav__link">Студия</a></li>
                         <li class="page-nav__item"><a href="" class="page-nav__link current">Портфолио</a></li>
@@ -180,7 +180,7 @@
         <footer class="footer">
             <div class="container footer__container">
                 <div class="footer-contacts">
-                    <a href="" lang="en" class="logo footer-contacts__logo">Web<span class="logo-white">Studio</span></a>
+                    <a href="" lang="en" class="logo footer-contacts__logo">Web<span class="logo__footer logo__footer--white">Studio</span></a>
                     <address class="address">
                         <ul class="contacts list">
                             <li class="contacts__item"><a href="https://goo.gl/maps/sHDZmhukoqg1UG7x9" target="_blank"
