--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <div class="container header__container">
                 <nav class="navigation">
                     <a href="" lang="en" class="logo navigation__logo">Web<span class="logo__header logo__header--black">Studio</span></a>
-                    <ul class="page-nav list">
+                    <ul class="page-nav">
                         <li class="page-nav__item"><a href="" class="page-nav__link current">Студия</a></li>
                         <li class="page-nav__item"><a href="./portfolio.html" class="page-nav__link">Портфолио</a></li>
                         <li class="page-nav__item"><a href="" class="page-nav__link">Контакты</a></li>
                     </ul>
                 </nav>
-                <ul class="auth-nav list">
+                <ul class="auth-nav">
                     <li class="auth-nav__item"><a href="mailto:info@devstudio.com" class="auth-nav__link">
                         <svg class="auth-nav__icon" width="16" height="12">
                             <use href="./images/icons/symbol-defs.svg#icon-envelope"></use>
@@ -51,7 +51,7 @@
             <section class="section">
                 <div class="container">
                     <h2 class="title visually-hidden">Особенности</h2>
-                    <ul class="features list">
+                    <ul class="features">
                         <li class="features__item">
                             <div class="features__img">
                                 <svg class="features__icon" width="70" height="70">
@@ -95,7 +95,7 @@
             <section class="section section--padding-top">
                 <div class="container">
                     <h2 class="title title--margin-bottom">Чем мы занимаемся</h2>
-                    <ul class="services list">
+                    <ul class="services">
                         <li class="services__item">
                             <div class="services__img">
                                 <img src="./images/services/box1.jpg" alt="Веб-сайты" width="370" height="294">
@@ -121,13 +121,13 @@
             <section class="section section--background">
                <div class="container">
                     <h2 class="title title--margin-bottom">Наша команда</h2>
-                    <ul class="team list">
+                    <ul class="team">
                         <li class="team__item">
                             <img src="./images/our-team/img-team-1.jpg" alt="Дизайнер1" width="270" height="260">
                             <div class="team__member">
                                 <h3 class="team__title">Игорь Демьяненко</h3>
                                 <p lang="en" class="team__text">Product Designer</p>
-                                <ul class="social list">
+                                <ul class="social">
                                     <li class="social__item">
                                         <a href="" class="social__link">
                                             <svg class="social__icon" width="20" height="20">
@@ -164,7 +164,7 @@
                             <div class="team__member">
                                 <h3 class="team__title">Ольга Репина</h3>
                                 <p lang="en" class="team__text">Frontend Developer</p>
-                                <ul class="social list">
+                                <ul class="social">
                                     <li class="social__item">
                                         <a href="" class="social__link">
                                             <svg class="social__icon" width="20" height="20">
@@ -201,7 +201,7 @@
                             <div class="team__member">
                                 <h3 class="team__title">Николай Тарасов</h3>
                                 <p lang="en" class="team__text">Marketing</p>
-                                <ul class="social list">
+                                <ul class="social">
                                     <li class="social__item">
                                         <a href="" class="social__link">
                                             <svg class="social__icon" width="20" height="20">
@@ -238,7 +238,7 @@
                             <div class="team__member">
                                 <h3 class="team__title">Михаил Ермаков</h3>
                                 <p lang="en" class="team__text">UI Designer</p>
-                                <ul class="social list">
+                                <ul class="social">
                                     <li class="social__item">
                                         <a href="" class="social__link">
                                             <svg class="social__icon" width="20" height="20">
@@ -277,7 +277,7 @@
             <section class="section">
                 <div class="container">
                     <h2 class="title title--margin-bottom">Постоянные клиенты</h2>
-                    <ul class="clients list">
+                    <ul class="clients">
                         <li class="clients__item">
                             <a href="" class="clients__link">
                                 <svg class="clients__icon" width="106" height="60">
@@ -331,7 +331,7 @@
                 <div class="footer-contacts">
                     <a href="" lang="en" class="logo footer-contacts__logo">Web<span class="logo__footer logo__footer--white">Studio</span></a>
                     <address class="address">
-                        <ul class="contacts list">
+                        <ul class="contacts">
                             <li class="contacts__item"><a href="https://goo.gl/maps/sHDZmhukoqg1UG7x9" target="_blank" class="contacts__link contacts__link--white">г. Киев, пр-т Леси Украинки, 26</a></li>
                             <li class="contacts__item"><a href="mailto:info@devstudio.com" class="contacts__link">info@devstudio.com</a>
                             </li>
@@ -341,7 +341,7 @@
                 </div>
                 <div class="footer-social">
                     <p class="footer-social__text">присоединяйтесь</p>
-                    <ul class="social list">
+                    <ul class="social">
                         <li class="social__item">
                             <a href="" class="social__link social__link--secondary-color">
                                 <svg class="social__icon" width="20" height="20">
