--- a/portfolio.html
+++ b/portfolio.html
@@ -19,13 +19,13 @@
             <div class="container header__container">
                 <nav class="navigation">
                     <a href="" lang="en" class="logo navigation__logo">Web<span class="logo__header logo__header--black">Studio</span></a>
-                    <ul class="page-nav list">
+                    <ul class="page-nav">
                         <li class="page-nav__item"><a href="./index.html" class="page-nav__link">Студия</a></li>
                         <li class="page-nav__item"><a href="" class="page-nav__link current">Портфолио</a></li>
                         <li class="page-nav__item"><a href="" class="page-nav__link">Контакты</a></li>
                     </ul>
                 </nav>
-                <ul class="auth-nav list">
+                <ul class="auth-nav">
                     <li class="auth-nav__item"><a href="mailto:info@devstudio.com" class="auth-nav__link">
                             <svg class="auth-nav__icon" width="16" height="12">
                                 <use href="./images/icons/symbol-defs.svg#icon-envelope"></use>
@@ -46,7 +46,7 @@
             <section class="section">
                 <div class="container">
                     <h1 class="visually-hidden">Примеры проектов</h1>
-                    <ul class="menu list">
+                    <ul class="menu">
                         <li class="menu__item"><button type="button" class="menu__btn">Все</button></li>
                         <li class="menu__item"><button type="button" class="menu__btn">Веб-сайты</button></li>
                         <li class="menu__item"><button type="button" class="menu__btn">Приложения</button></li>
@@ -54,7 +54,7 @@
                         <li class="menu__item"><button type="button" class="menu__btn">Маркетинг</button></li>
                     </ul>
                     
-                    <ul class="project list">
+                    <ul class="project">
                         <li class="project__item">
                             <a href="" class="project__link">
                                 <div class="project__img">
@@ -182,7 +182,7 @@
                 <div class="footer-contacts">
                     <a href="" lang="en" class="logo footer-contacts__logo">Web<span class="logo__footer logo__footer--white">Studio</span></a>
                     <address class="address">
-                        <ul class="contacts list">
+                        <ul class="contacts">
                             <li class="contacts__item"><a href="https://goo.gl/maps/sHDZmhukoqg1UG7x9" target="_blank"
                                     class="contacts__link contacts__link--white">г. Киев, пр-т Леси Украинки, 26</a></li>
                             <li class="contacts__item"><a href="mailto:info@devstudio.com"
@@ -195,7 +195,7 @@
                 </div>
                 <div class="footer-social">
                     <p class="footer-social__text">присоединяйтесь</p>
-                    <ul class="social list">
+                    <ul class="social">
                         <li class="social__item">
                             <a href="" class="social__link social__link--secondary-color">
                                 <svg class="social__icon" width="20" height="20">
