--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <header class="header">
             <div class="container header__container">
                 <nav class="navigation">
-                    <a href="" lang="en" class="logo navigation__logo">Web<span class="logo__header logo__header--black">Studio</span></a>
+                    <a href="" lang="en" class="logo navigation__logo">Web<span class="logo__black">Studio</span></a>
                     <ul class="page-nav">
-                        <li class="page-nav__item"><a href="" class="page-nav__link current">Студия</a></li>
+                        <li class="page-nav__item"><a href="" class="page-nav__link page-nav__link--current">Студия</a></li>
                         <li class="page-nav__item"><a href="./portfolio.html" class="page-nav__link">Портфолио</a></li>
                         <li class="page-nav__item"><a href="" class="page-nav__link">Контакты</a></li>
                     </ul>
@@ -44,16 +44,16 @@
 
         <main>
             <section class="hero">
-                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                <button type="button" class="hero-btn" data-modal-open>Заказать услугу</button>
+                <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+                <button type="button" class="hero__btn" data-modal-open>Заказать услугу</button>
             </section>
 
             <section class="section">
                 <div class="container">
-                    <h2 class="title visually-hidden">Особенности</h2>
+                    <h2 class="section__title visually-hidden">Особенности</h2>
                     <ul class="features">
                         <li class="features__item">
-                            <div class="features__img">
+                            <div class="features__box">
                                 <svg class="features__icon" width="70" height="70">
                                     <use href="./images/icons/symbol-defs.svg#icon-antenna-img"></use>
                                 </svg>
@@ -62,7 +62,7 @@
                             <p class="features__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                         </li>
                         <li class="features__item">
-                            <div class="features__img">
+                            <div class="features__box">
                                 <svg class="features__icon" width="70" height="70">
                                     <use href="./images/icons/symbol-defs.svg#icon-clock-img"></use>
                                 </svg>
@@ -71,7 +71,7 @@
                             <p class="features__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                         </li>
                         <li class="features__item">
-                            <div class="features__img">
+                            <div class="features__box">
                                 <svg class="features__icon" width="70" height="70">
                                     <use href="./images/icons/symbol-defs.svg#icon-diagram-img"></use>
                                 </svg>
@@ -80,7 +80,7 @@
                             <p class="features__text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                         </li>
                         <li class="features__item">
-                            <div class="features__img">
+                            <div class="features__box">
                                 <svg class="features__icon" width="70" height="70">
                                     <use href="./images/icons/symbol-defs.svg#icon-astronaut-img"></use>
                                 </svg>
@@ -94,7 +94,7 @@
 
             <section class="section section--padding-top">
                 <div class="container">
-                    <h2 class="title title--margin-bottom">Чем мы занимаемся</h2>
+                    <h2 class="section__title section__title--margin-bottom">Чем мы занимаемся</h2>
                     <ul class="services">
                         <li class="services__item">
                             <div class="services__img">
@@ -120,7 +120,7 @@
 
             <section class="section section--background">
                <div class="container">
-                    <h2 class="title title--margin-bottom">Наша команда</h2>
+                    <h2 class="section__title section__title--margin-bottom">Наша команда</h2>
                     <ul class="team">
                         <li class="team__item">
                             <img src="./images/our-team/img-team-1.jpg" alt="Дизайнер1" width="270" height="260">
@@ -276,7 +276,7 @@
 
             <section class="section">
                 <div class="container">
-                    <h2 class="title title--margin-bottom">Постоянные клиенты</h2>
+                    <h2 class="section__title section__title--margin-bottom">Постоянные клиенты</h2>
                     <ul class="clients">
                         <li class="clients__item">
                             <a href="" class="clients__link">
@@ -329,7 +329,7 @@
         <footer class="footer">
             <div class="container footer__container">
                 <div class="footer-contacts">
-                    <a href="" lang="en" class="logo footer-contacts__logo">Web<span class="logo__footer logo__footer--white">Studio</span></a>
+                    <a href="" lang="en" class="logo footer-contacts__logo">Web<span class="logo__white">Studio</span></a>
                     <address class="address">
                         <ul class="contacts">
                             <li class="contacts__item"><a href="https://goo.gl/maps/sHDZmhukoqg1UG7x9" target="_blank" class="contacts__link contacts__link--white">г. Киев, пр-т Леси Украинки, 26</a></li>
