--- a/portfolio.html
+++ b/portfolio.html
@@ -18,10 +18,10 @@
         <header class="header">
             <div class="container header__container">
                 <nav class="navigation">
-                    <a href="" lang="en" class="logo navigation__logo">Web<span class="logo__header logo__header--black">Studio</span></a>
+                    <a href="" lang="en" class="logo navigation__logo">Web<span class="logo__black">Studio</span></a>
                     <ul class="page-nav">
                         <li class="page-nav__item"><a href="./index.html" class="page-nav__link">Студия</a></li>
-                        <li class="page-nav__item"><a href="" class="page-nav__link current">Портфолио</a></li>
+                        <li class="page-nav__item"><a href="" class="page-nav__link page-nav__link--current">Портфолио</a></li>
                         <li class="page-nav__item"><a href="" class="page-nav__link">Контакты</a></li>
                     </ul>
                 </nav>
@@ -57,7 +57,7 @@
                     <ul class="project">
                         <li class="project__item">
                             <a href="" class="project__link">
-                                <div class="project__img">
+                                <div class="project__box">
                                     <img src="./images/projects/project1.jpg" alt="Сайт пример 1" width="370" height="294">
                                     <p class="project__description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -70,7 +70,7 @@
                         </li>
                         <li class="project__item">
                             <a href="" class="project__link">
-                                <div class="project__img">
+                                <div class="project__box">
                                     <img src="./images/projects/project2.jpg" alt="Дизайна пример 1" width="370" height="294">
                                     <p class="project__description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -83,7 +83,7 @@
                         </li>
                         <li class="project__item">
                             <a href="" class="project__link">
-                                <div class="project__img">
+                                <div class="project__box">
                                     <img src="./images/projects/project3.jpg" alt="Приложение пример 1" width="370" height="294">
                                     <p class="project__description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -96,7 +96,7 @@
                         </li>
                         <li class="project__item">
                             <a href="" class="project__link">
-                                <div class="project__img">
+                                <div class="project__box">
                                     <img src="./images/projects/project4.jpg" alt="Маркетинговый проект пример 1" width="370" height="294">
                                     <p class="project__description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -109,7 +109,7 @@
                         </li>
                         <li class="project__item">
                             <a href="" class="project__link">
-                                <div class="project__img">
+                                <div class="project__box">
                                     <img src="./images/projects/project5.jpg" alt="Приложение пример 2" width="370" height="294">
                                     <p class="project__description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -122,7 +122,7 @@
                         </li>
                         <li class="project__item">
                             <a href="" class="project__link">
-                                <div class="project__img">
+                                <div class="project__box">
                                     <img src="./images/projects/project6.jpg" alt="Сайт пример 2" width="370" height="294">
                                     <p class="project__description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -135,7 +135,7 @@
                         </li>
                         <li class="project__item">
                             <a href="" class="project__link">
-                                <div class="project__img">
+                                <div class="project__box">
                                     <img src="./images/projects/project7.jpg" alt="Дизайна пример 2" width="370" height="294">
                                     <p class="project__description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -148,7 +148,7 @@
                         </li>
                         <li class="project__item">
                             <a href="" class="project__link">
-                                <div class="project__img">
+                                <div class="project__box">
                                     <img src="./images/projects/project8.jpg" alt="Маркетинговый проект пример 2" width="370" height="294">
                                     <p class="project__description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -161,7 +161,7 @@
                         </li>
                         <li class="project__item">
                             <a href="" class="project__link">
-                                <div class="project__img">
+                                <div class="project__box">
                                     <img src="./images/projects/project9.jpg" alt="Приложение пример 3" width="370" height="294">
                                     <p class="project__description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -180,7 +180,7 @@
         <footer class="footer">
             <div class="container footer__container">
                 <div class="footer-contacts">
-                    <a href="" lang="en" class="logo footer-contacts__logo">Web<span class="logo__footer logo__footer--white">Studio</span></a>
+                    <a href="" lang="en" class="logo footer-contacts__logo">Web<span class="logo__white">Studio</span></a>
                     <address class="address">
                         <ul class="contacts">
                             <li class="contacts__item"><a href="https://goo.gl/maps/sHDZmhukoqg1UG7x9" target="_blank"
